--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 TOKEN=
 
-PREFIX="a!"
+PREFIX= 
 
-OWNER_ID=688028837711446041
+OWNER_ID= 
 
-LAVA_HOST=lava.link
+LAVA_HOST=
 
-LAVA_PORT=80
+LAVA_PORT=
 
-LAVA_PASS=youshallnotpass
+LAVA_PASS=
 
 ENABLE_SPOTIFY=true
 
 # you will need these if you enabled spotify
 
-SPOTIFY_ID=6a484dd0edc34eb88d3a77edfbbf4bd3
+SPOTIFY_ID=
 
-SPOTIFY_SECRET=46ee3608fd824785af13e5f7b980bdf1
+SPOTIFY_SECRET=
 
 SPOTIFY_PLAYLIST_PAGE_LIMIT=2
