--- a/package.json
+++ b/package.json
@@ -1,39 +1,37 @@
 {
-  "name": "Msv-Music",
-  "version": "7.3.4",
-  "description": "OP Music Bot",
+  "name": "Music-Boat",
+  "version": "1.2.1",
+  "description": "Music bot that uses erela.js by using Mongo Database",
   "main": "index.js",
   "start": "node .",
-  "engines": {
-    "node": "16.x"
-  },
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "@top-gg/sdk": "^3.1.1",
     "ascii-table": "0.0.9",
-    "bytes": "^3.1.0",
+    "bytes": "^3.1.2",
     "chalk": "^4.1.1",
     "colors": "^1.4.0",
-    "common-tags": "^1.8.0",
+    "common-tags": "^1.8.2",
     "dayjs": "^1.10.7",
     "discord-buttons": "^4.0.0",
     "discord-reply": "^0.1.2",
-    "discord.js": "^13.2.0",
+    "discord.js": "^13.1.0",
     "discordjs-button-pagination": "^2.0.0",
     "discordnpm": "^1.0.1",
+    "enmap": "^5.8.7",
     "erela.js": "^2.3.3",
     "erela.js-deezer": "^1.0.5",
     "erela.js-facebook": "^1.0.3",
     "erela.js-spotify": "^1.2.0",
     "express": "^4.17.1",
-    "genius-lyrics": "^4.3.5",
-    "got": "^12.0.1",
     "i": "^0.3.6",
-    "instead": "^1.0.3",
     "moment": "^2.22.2",
     "mongoose": "^5.12.12",
-    "ms": "^2.1.3",
+    "node": "16.6.1",
     "node-os-utils": "^1.3.5",
-    "pretty-ms": "^7.0.1"
+    "pretty-ms": "^7.0.1",
+    "topgg-autoposter": "^2.0.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -42,14 +40,11 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Just-Msv/Msv-Music.git"
+    "url": "git+https://github.com/Just-msv/Music-Boat.git"
   },
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/Just-Msv/Msv-Musicissues"
+    "url": "https://github.com/Just-msv/Music-Boat/issues"
   },
-  "homepage": "https://github.com/Just-Msv/Msv-Music#readme",
-  "devDependencies": {
-    "node": "^16.10.0"
-  }
+  "homepage": "https://github.com/Just-msv/Music-Boat#readme"
 }
