--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -10,7 +10,7 @@
     "nodes": [
       {
         "host": "" ,
-        "port": 80
+        "port": 80,
         "password": "",
         "secure": true 
       }
